<resources>
    <string name="app_name">Memo Keeper</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Don\'t have an account, <b>Sign up</b></string>
    <string name="email">E-mail</string>
    <string name="bt_register">Register</string>
    <string name="al_register">Already have an account, <b>Log in</b></string>
    <string name="sign_up">Sign Up</string>
</resources>
