<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="Memo Keeper"
        android:textStyle="bold"
        android:textColor="@color/light_black"
        android:textAlignment="center"
        android:textSize="40sp" />
    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_gravity="center"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:divider="@drawable/spacer"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:textCursorDrawable="@null"
                android:hint="@string/username"
                android:background="@drawable/edit_text_bg"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="text"
                android:padding="12dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textCursorDrawable="@null"
                android:hint="@string/email"
                android:background="@drawable/edit_text_bg"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:textCursorDrawable="@null"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textPassword"
                android:padding="12dp" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:elevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="0dp"
                >

                <Button
                    android:id="@+id/Register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@color/light_blue"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/old_user"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:padding="12dp"
                android:layout_height="wrap_content"
                android:text="@string/al_register" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>